fixed spacing more

--- a/client/public/index.css
+++ b/client/public/index.css
@@ -63,6 +63,11 @@
 	position: relative;
 }
 
+.nothing{
+	bottom: -25px;
+
+}
+
 
 .absolute{
 	position: absolute;
